db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2021-09-08T12:32:28Z"
  generation: 1
  labels:
    app: db
  name: db
  namespace: default
  uid: ec675242-9e86-40cc-b43a-25ee6246da05
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: db
    spec:
      containers:
      - image: k8spracticalguide/mysql:5.7.22
        imagePullPolicy: IfNotPresent
        name: mysql
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
