mysql-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql 
  updateStrategy:
    type: RollingUpdate
  replicas: 2
  template:
    metadata:
      labels:
        app: mysql
    spec: 
      containers:
      - name: mysql
        image: k8spracticalguide/mysql:5.7.22
        volumeMounts:
          - name: data
            mountPath: /var/lib/mysql
          - name: confd
            mountPath: /etc/mysql/conf.d
          - name: initdb
            mountPath: /docker-entrypoint-initdb.d
          - name: backup
            mountPath: /mnt/backup
      volumes:
        - name: confd
          emptyDir: {}
        - name: scripts
          configMap:
            name: mysql-scripts
        - name: initdb
          emptyDir: {}
        - name: backup
          persistentVolumeClaim:
            claimName: backup-mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
