mattermost-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-09-11T06:32:02Z"
  labels:
    app: mattermost
  name: mattermost
  namespace: default
  uid: aafc65f1-bbae-46ad-92b1-2ee7327a16b3
spec:
  externalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31637
    port: 8065
    protocol: TCP
    targetPort: 8065
  selector:
    app: mattermost
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
