mattermost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mattermost
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: mattermost.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mattermost
                port:
                  number: 8065
